# sparta

./: LICENSE  README.md  pyproject.toml
configs/: sparta_pred.json  sparta_train.json  transformer_pred.json  transformer_train.json  unet_pred.json  unet_train.json
dataset/: chip_training_data.ipynb  point_training_data.ipynb  remove_nodata_samples.ipynb
dataset/conus_ard/: conus_c2_ard_grid.shp.xml
dataset/samples/: h03v10_sample_points.tif  h04v01_sample_points.tif  h13v13_sample_points.tif  h20v08_sample_points.tif  h24v13_sample_points.tif  train_unet_chips_256.csv  val_unet_chips_256.csv
models/sparta/: model3450703.err  model3450703.out  transformer_encoder_mlp_20_02_2025_11_21_24.csv  transformer_encoder_mlp_20_02_2025_11_21_24.json
models/transformer/: model3450732.err  model3450732.out  transformer_encoder_mlp_20_02_2025_11_23_53.csv  transformer_encoder_mlp_20_02_2025_11_23_53.json
models/unet/: model3450564.err  model3450564.out  unet_model_20_02_2025_11_07_15.csv  unet_model_20_02_2025_11_07_15.json
sparta/: common.py
sparta/data/: strecords.py  trecords.py  urecords.py
sparta/prediction/: mpiframework.py  prodgen.py  stpreds.py  tpreds.py  upreds.py
sparta/tfrecords/: read.py  write.py
sparta/training/: custom.py  models.py  train.py
