[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sparta"
version = "0.0.1"
description = "Deep Learning Framework for Spatial Recognition and Temporal Alignment (SpaRTA)"
readme = "README.md"
requires-python = ">=3.7"
#keywords = ["one", "two"]
license = {text = "Public Domain"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "focal_loss",
    "fsspec",
    "geopandas",
    "numpy",
    "pandas",
    "rasterio",
    "requests",
    "segmentation_models",
    "shapely",
    "tensorflow==2.12.0",
    "tqdm",
    "zarr"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
#    "tests",
#    "integration",
]

#dynamic = ["version"]

#[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

#[project.scripts]
#my-script = "my_package.module:function"

[tool.setuptools.packages.find]
include = ["sparta"]
